kubernetes/apps/livekit/templates/ingress.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
      - livekit.internal.paulfriedrich.me
      - livekit-backend.internal.paulfriedrich.me
  rules:
  - host: livekit.internal.paulfriedrich.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lk-react
            port:
              number: 80
  - host: livekit-backend.internal.paulfriedrich.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: livekit-server
            port:
              number: 80
